# Robinhood-ATS

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  pages.yml
docs/: architecture.md  commands.md  configuration.md  faq.md  index.html  known-limits.md  mcp-clients.md  quickstart.md  script.js  sdk-reference.md  styles.css  testing.md
examples/: README.md  mcp-client-config-with-token.json  mcp-client-config.json  quickstart.py  read_only.py
robinhood_mcp_bridge/: __init__.py  audit.py  auth.py  cli.py  config.py  guardrails.py  mcp.py  sdk.py  server.py  state.py  tools.py  upstream.py
tests/: conftest.py  test_auth.py  test_cli.py  test_dependencies.py  test_docs.py  test_guardrails.py  test_makefile.py  test_public_api.py  test_release_assets.py  test_sdk.py  test_secret_hygiene.py  test_tools_filter.py  test_tools_metadata.py
