[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robinhood-mcp-bridge"
version = "0.1.0"
description = "Lean local MCP bridge and Python client for Robinhood Agentic Trading"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Rithwik Babu" }]
keywords = ["mcp", "robinhood", "agentic-trading", "trading", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "httpx>=0.27.0",
  "starlette>=0.37.0",
  "uvicorn>=0.29.0"
]

[project.urls]
Homepage = "https://github.com/rithwikbabu/Robinhood-ATS"
Documentation = "https://github.com/rithwikbabu/Robinhood-ATS#readme"
Repository = "https://github.com/rithwikbabu/Robinhood-ATS"
Issues = "https://github.com/rithwikbabu/Robinhood-ATS/issues"

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "anyio>=4.0.0"
]
dev = [
  "build>=1.2.0",
  "pytest>=8.0.0",
  "anyio>=4.0.0"
]

[project.scripts]
robinhood-mcp-bridge = "robinhood_mcp_bridge.cli:main"
rh-mcp = "robinhood_mcp_bridge.cli:main"

[tool.setuptools.packages.find]
include = ["robinhood_mcp_bridge*"]

[tool.setuptools.package-data]
robinhood_mcp_bridge = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
